<resources>
    <string name="app_name">WorkHub</string>
    <string name="listWorkplaces">List Workplaces</string>
    <string name="listReservations">See reservations</string>
    <string name="listFavourites">Favourites</string>
    <string name="listDetailUser">My User</string>
    <string name="adminButton">Administration</string>
    <string name="logoDescription">Logo</string>
    <string name="loginUsername">Username:</string>
    <string name="loginPassword">Password:</string>
    <string name="loginForgot">Forgot password</string>
    <string name="loginRegister">Create account</string>
    <string name="loginButton">Login</string>
    <string name="loginCheckbix">Remember me</string>
    <string name="registerName">Name:</string>
    <string name="registerSurname">Surname:</string>
    <string name="registerUsername">Username:</string>
    <string name="registerPhoneNumber">Phone:</string>
    <string name="registerAdmin">¿Admin?</string>
    <string name="registerRegistrar">Register</string>
    <string name="registerEdit">Edit</string>
    <string name="registerBack">Back</string>
    <string name="registerPassword">Password:</string>
    <string name="registerEmail">Email:</string>
    <string name="errorRegister">Something went wrong. Try again!</string>
    <string name="correctRegister">Registered successfully!</string>
    <string name="correctEdit">Edited successfully!</string>
    <string name="loginCorrect">Login correct</string>
    <string name="loginIncorrect">Login incorrect</string>
    <string name="loginNot">Not loged. How do you get here?</string>
    <string name="menuWorkplacesAdd">Add Workplace</string>
    <string name="listWorkplacesDetails">See details</string>
    <string name="listWorkplacesEdit">Edit</string>
    <string name="listWorkplacesDelete">Delete</string>
    <string name="registerWorkplaceName">Name: </string>
    <string name="registerWorkplaceDescription">Description: </string>
    <string name="registerWorkplacePhoneNumber">Phone number: </string>
    <string name="registerWorkplaceCity">City: </string>
    <string name="registerWorkplaceaddress">Address: </string>
    <string name="registerWorkplaceSchedule">Schedule: </string>
    <string name="confirmationMessage">Are you sure?</string>
    <string name="removeWorkplaceMessage">Delete Workplace</string>
    <string name="confirmationYes">Yes</string>
    <string name="confirmationNo">No</string>
    <string name="menuDetailsWorkspace">Add Space</string>
    <string name="detailsWorkplacePhone">Phone number:</string>
    <string name="detailsWorkplaceLocation">Localization:</string>
    <string name="detailsWorkplaceSchedule">Schedule:</string>
    <string name="spaceItemReserve">Reserve</string>
    <string name="spaceItemDeleteMessage">Delete Space</string>
    <string name="spaceRegisterName">Space name: </string>
    <string name="spaceRegisterDesciption">Space description:</string>
    <string name="spaceRegisterServices">Available Services:</string>
    <string name="spaceRegisterDessignedWorkplace">Workplace assigned:</string>
    <string name="reserveRegisterSpace">Selected Space:</string>
    <string name="reserveRegisterDate">Reserve date:</string>
    <string name="reserveDeleteMessage">Delete Reserve</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Logging out</string>
    <string name="makePhoto">Make photo</string>
    <string name="mapSave">Save</string>
    <string name="mapDelete">Reset</string>
    <string name="mapMessage">Please, select a point in the map</string>
    <string name="photoMessage">Please, make a photo</string>
    <string name="seeWorkplaceMap">See on map</string>
    <string name="registerWorkplaceMapOK">Location achieved successfully!</string>
    <string name="registerWorkplaceMapNO">Location cancelled</string>
    <string name="mainMenuList">Workplaces</string>
    <string name="mainMenuReserve">Reserves</string>
    <string name="mainMenuUser">User</string>
    <string name="mainMenuSettings">Settings</string>
    <string name="mainMenuLogout">Logout</string>
    <string name="gpsMe">Me</string>
    <string name="preferences1">Remember me</string>
    <string name="preferences2">Place auto marker</string>
    <string name="preferences3">MapDetails center on me</string>
    <string name="settingsSaved">Preferences saved!</string>
    <string name="settingsError">Error saving preferences!</string>
    <string name="autoLogin">Autologin correct!</string>
    <string name="autoLoginError">Error at autologin!</string>
    <string name="cameraError">Error opening the camera!</string>
    <string name="a"></string>
</resources>