<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/defaultRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/defaultautoPlaceMarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/defaultDetailCenterMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/mapSave" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/registerBack" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>