<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterWorkplace">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplaceName" />

            <EditText
                android:id="@+id/registerWorkplaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplaceDescription" />

            <EditText
                android:id="@+id/registerWorkplaceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplacePhoneNumber" />

            <EditText
                android:id="@+id/registerWorkplacePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplaceCity" />

            <EditText
                android:id="@+id/registerWorkplaceCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplaceaddress" />

            <EditText
                android:id="@+id/registerWorkplaceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerWorkplaceSchedule" />

            <EditText
                android:id="@+id/registerWorkplaceSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/workplacePhoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:clickable="true"
                        android:onClick="makePhoto"
                        app:layout_constraintEnd_toStartOf="@+id/button4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="makePhoto"
                        android:text="@string/makePhoto"
                        app:layout_constraintEnd_toStartOf="@+id/selectMap"
                        app:layout_constraintStart_toEndOf="@+id/workplacePhoto" />

                    <ImageButton
                        android:id="@+id/selectMap"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="registerMap"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button4"
                        app:srcCompat="@android:drawable/ic_dialog_map" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/registerWorkplaceRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/registerRegistrar" />

            <Button
                android:id="@+id/registerWorkplaceBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:paddingTop="8dp"
                android:text="@string/registerBack" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>