<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/tvListWorkplaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvListWrokplaceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bListDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listWorkplacesDetails"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/bListEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listWorkplacesEdit"
            android:visibility="visible" />

        <Button
            android:id="@+id/bListDelete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listWorkplacesDelete"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>